--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -1,9 +1,9 @@
-#url = https://qaapp.loadpay.com/Account/Login?ReturnUrl=%2F
-url=https://stageapp.loadpay.com/Account/Login
-outlookurl=https://webmail.truckstop.com
-email= all@loadpaytest.truckstop.com
-#AdminURL=https://lpqaadmin.truckstopprivate.net
-AdminURL=https://lpstageadmin.truckstopprivate.net
+url = https://qaapp.loadpay.com/Account/Login
+#url = https://stageapp.loadpay.com/Account/Login
+outlookurl = https://webmail.truckstop.com
+email = all@loadpaytest.truckstop.com
+AdminURL = https://lpqaadmin.truckstopprivate.net
+#AdminURL = https://lpstageadmin.truckstopprivate.net
 #browser = FF
 browser = chrome
 
