--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -1,9 +1,15 @@
 url = https://qaapp.loadpay.com/Account/Login
 #url = https://stageapp.loadpay.com/Account/Login
-outlookurl = https://webmail.truckstop.com
-email = all@loadpaytest.truckstop.com
+
 AdminURL = https://lpqaadmin.truckstopprivate.net
 #AdminURL = https://lpstageadmin.truckstopprivate.net
+
+RTFurl = http://uat.realtimefreight.com:8000/RTF4/RtfShipper/login.aspx
+
+outlookurl = https://webmail.truckstop.com
+
+email = all@loadpaytest.truckstop.com
+
 #browser = FF
 browser = chrome
 
