--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,19 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/groovy-2.4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/groovy-json-2.4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/groovy-xml-2.4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/httpmime-4.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/jaxb-api-2.2.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ChristopherVonKaenel/Downloads/rest-assured-3.1.0-dist/rest-assured-3.1.0-deps/tagsoup-1.2.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
