--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -1,10 +1,19 @@
-url = https://qaapp.loadpay.com/Account/Login?ReturnUrl=%2F
+url = https://qaapp.loadpay.com/Account/Login
 #url=https://stageapp.loadpay.com/Account/Login
+
 outlookurl=https://webmail.truckstop.com
+
 email= all@loadpaytest.truckstop.com
+
 #AdminURL=https://lpqaadmin.truckstopprivate.net
 AdminURL=https://lpstageadmin.truckstopprivate.net
+
 RTFcarrier=http://uat.realtimefreight.com:8000/rtf4/RTFCarrier/login.aspx
 RTFBroker=http://uat.realtimefreight.com:8000/RTF4/RtfShipper/login.aspx
+
+CarrierMatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateMatchedCarrier.csv
+CarrierUnmatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateUnmatchedCarrier.csv
+BrokerBulkUploadPaymentErrorsPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\BrokerBulkUploadPaymentErrors.csv
+
 #browser = FF
 browser = chrome
