--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -11,6 +11,8 @@ email= all@loadpaytest.truckstop.com
 RTFcarrier=http://uat.realtimefreight.com:8000/rtf4/RTFCarrier/login.aspx
 RTFBroker=http://uat.realtimefreight.com:8000/RTF4/RtfShipper/login.aspx
 
+ITSDispatchurl=https://staging.itsdispatch.com/login.php
+
 CarrierMatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateMatchedCarrier.csv
 CarrierUnmatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateUnmatchedCarrier.csv
 BrokerBulkUploadPaymentErrorsPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\BrokerBulkUploadPaymentErrors.csv
