--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -1,8 +1,8 @@
-#url = https://qaapp.loadpay.com/Account/Login
-url=https://stageapp.loadpay.com/Account/Login
+url = https://qaapp.loadpay.com/Account/Login
+#url=https://stageapp.loadpay.com/Account/Login
 
-#AdminURL=https://lpqaadmin.truckstopprivate.net
-AdminURL=https://lpstageadmin.truckstopprivate.net
+AdminURL=https://lpqaadmin.truckstopprivate.net
+#AdminURL=https://lpstageadmin.truckstopprivate.net
 
 outlookurl=https://webmail.truckstop.com
 
