--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>LoadPay</groupId>
-  <artifactId>LoadPay</artifactId>
+  <groupId>SeleniumFramework</groupId>
+  <artifactId>SeleniumFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>LoadPay</name>
+  <name>SeleniumFramework</name>
   <url>http://maven.apache.org</url>
 
   <properties>
