--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
                      <artifactId>poi</artifactId>
                      <version>3.16-beta2</version>
               </dependency>
+              
+              <dependency>
+    				<groupId>com.opencsv</groupId>
+    				<artifactId>opencsv</artifactId>
+    				<version>4.2</version>
+			  </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
 			<dependency>
