--- a/.classpath
+++ b/.classpath
@@ -17,7 +17,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -28,19 +28,19 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/commons-lang3-3.4.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-2.4.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-json-2.4.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-xml-2.4.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/hamcrest-library-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/httpmime-4.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/jaxb-api-2.2.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/rest-assured-3.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/LoadpayTruckstop/SeleniumFramework/src/main/resources/libs/RestAssured/tagsoup-1.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-2.4.12.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-json-2.4.12.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-xml-2.4.12.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/httpmime-4.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/jaxb-api-2.2.12.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/rest-assured-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/SeleniumFramework/src/main/resources/libs/RestAssured/tagsoup-1.2.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
