Added random date string concatenation to broker and carrier register

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -19,3 +19,9 @@ BrokerBulkUploadPaymentErrorsPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\S
 
 #browser = FF
 browser = chrome
+
+#Bulk Payment Email Credentials
+SinglePaymentEmailAddress = Loadpaysinglepayment@loadpaytest.truckstop.com
+BulkPaymentEmailAddress = loadpaybulkpayment@loadpaytest.truckstop.com
+ApiPaymentEmailAddress = LoadpayAPIpayment@loadpaytest.truckstop.com
+PasswordForBulkPaymentUsers = Password@1
