Updated Broker and Carrier register and login for dynamic data

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -25,3 +25,10 @@ SinglePaymentEmailAddress = Loadpaysinglepayment@loadpaytest.truckstop.com
 BulkPaymentEmailAddress = loadpaybulkpayment@loadpaytest.truckstop.com
 ApiPaymentEmailAddress = LoadpayAPIpayment@loadpaytest.truckstop.com
 PasswordForBulkPaymentUsers = Password@1
+
+#Use this to generate a date-time string that gets concatenated with the broker/carrier register email
+#---must be lower case
+#---setting to false will use whatever is in the broker/carrier register and login tests
+#---setting to true will also use the spreadsheet data but will split the email address and append a date-time string to make it always unique
+useDynamicBrokerData = false
+useDynamicCarrierData = false
