Updated config prop to leave QA defaulted and dynamic data set to true

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -1,8 +1,8 @@
-#url = https://qaapp.loadpay.com/Account/Login
-url=https://stageapp.loadpay.com/Account/Login
+url = https://qaapp.loadpay.com/Account/Login
+#url=https://stageapp.loadpay.com/Account/Login
 
-#AdminURL=https://lpqaadmin.truckstopprivate.net
-AdminURL=https://lpstageadmin.truckstopprivate.net
+AdminURL=https://lpqaadmin.truckstopprivate.net
+#AdminURL=https://lpstageadmin.truckstopprivate.net
 
 outlookurl=https://webmail.truckstop.com
 
@@ -30,6 +30,6 @@ PasswordForBulkPaymentUsers = Password@1
 #---must be lower case
 #---setting to false will use whatever is in the broker/carrier register and login tests
 #---setting to true will also use the spreadsheet data but will split the email address and append a date-time string to make it always unique
-useDynamicBrokerData = false
-useDynamicCarrierData = false
-useDynamicUnmatchedData = false
+useDynamicBrokerData = true
+useDynamicCarrierData = true
+useDynamicUnmatchedData = true
