Regression updates plus nacha capability

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -5,8 +5,10 @@ AdminURL=https://lpqaadmin.truckstopprivate.net
 #AdminURL=https://lpstageadmin.truckstopprivate.net
 
 outlookurl=https://webmail.truckstop.com
-
 email= all@loadpaytest.truckstop.com
+
+nachaPaymentURL=http://lpqanodejs.truckstopprivate.net:8080/api/nacha/1 
+emailBatchPaymentURL=https://lpqaloads.truckstopprivate.net/Financial/EmailBatchPaymentDetails
 
 RTFcarrier=http://uat.realtimefreight.com:8000/rtf4/RTFCarrier/login.aspx
 RTFBroker=http://uat.realtimefreight.com:8000/RTF4/RtfShipper/login.aspx
