--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -35,3 +35,4 @@ PasswordForBulkPaymentUsers = Password@1
 useDynamicBrokerData = true
 useDynamicCarrierData = true
 useDynamicUnmatchedData = true
+useFullRegressionData =  true
