Config and report updates

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -57,14 +57,14 @@ browser = chrome
 
 
 #===============VIDEO CAPTURE CONFIG========================
-useVideoCapture = false
+useVideoCapture = true
 
 
 
 #===============AUT CONFIG========================
 AUT = Loadpay
-AUT = LoadpayAdmin
-AUT = FreightMatching
-AUT = ITSDispatch
-AUT = Mobile
-AUT = V5
+#AUT = LoadpayAdmin
+#AUT = FreightMatching
+#AUT = ITSDispatch
+#AUT = Mobile
+#AUT = V5
