--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -1,9 +1,9 @@
 #===============LOAD PAY URLS AND CONFIGS========================
-#loadPayURL = https://qaapp.loadpay.com/Account/Login
-loadPayURL=https://stageapp.loadpay.com/Account/Login
+loadPayURL = https://qaapp.loadpay.com/Account/Login
+#loadPayURL=https://stageapp.loadpay.com/Account/Login
 
-#loadPayAdminURL=https://lpqaadmin.truckstopprivate.net
-loadPayAdminURL=https://lpstageadmin.truckstopprivate.net
+loadPayAdminURL=https://lpqaadmin.truckstopprivate.net
+#loadPayAdminURL=https://lpstageadmin.truckstopprivate.net
 
 outlookURL=https://webmail.truckstop.com
 loadpaytestEmail= all@loadpaytest.truckstop.com
