--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -44,6 +44,10 @@ ITSDispatchURL=https://staging.itsdispatch.com/login.php
 
 
 
+#===============MOBILE URLS==========================
+mobileURL=https://loadtracking-qa.truckstop.com/app/tracks/list
+
+
 #===============V5 URLS====================================
 v5_prototypeURL=https://v5-prototype.truckstop.com/login
 
