--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,42 +1,31 @@
-suite: 
- listeners: 
-  listener: 
-   - 
-   "_class-name": "extentreportlistener.ExtentReporterNG"
-   - 
-   "_class-name": "testngcustomreportlistener.TestNGCustomReportListener"
-   - 
-   "_class-name": "util.TestRetryAnalyzerListener"
- "suite-files": 
-  "suite-file": 
-   _path: "src/main/resources/LoadPayXMLs/2018/CreateNewBrokerAndCarrierWithPayments.xml"
- test: 
-  classes: 
-   class: 
-    - 
-   _name: "testcases.loadpay.carrier.CarrierNotificationTest"
-    - 
-   _name: "testcases.loadpay.carrier.CarrierWireTransferTest"
-    - 
-   _name: "testcases.loadpay.carrier.CarrierSameDayACHTest"
-    - 
-   _name: "testcases.loadpay.carrier.CarrierNextDAYACHTest"
-    - 
-   _name: "testcases.loadpay.carrier.CarrierPayMeNowTabTest"
-    - 
-   _name: "testcases.loadpay.broker.BrokerPaymentforUnmatchedCarrierTest"
-    - 
-   _name: "testcases.loadpay.unmatched.UnmatchedCarrierRegistrationTest"
-    - 
-   _name: "testcases.loadpay.unmatched.UnmatchedCariierEmailVerifyTest"
-    - 
-   _name: "testcases.loadpay.unmatched.UnmatchedCarrierAdminTest"
-    - 
-   _name: "testcases.loadpay.carrier.CarrierFirstLoginTest"
-    - 
-   _name: "testcases.loadpay.unmatched.UnmatchedCarrierSameDayACHTest"
-    - 
-   _name: "testcases.loadpay.unmatched.UnmatchedCarrierWireTransferTest"
-  _name: "I Sprint Test Cases"
-  "_preserve-order": true
- _name: "Sprint I Test Suite"
+name: Sprint I Test Suite
+ 
+listeners: 
+  - extentreportlistener.ExtentReporterNG
+  - testngcustomreportlistener.TestNGCustomReportListener
+  - util.TestRetryAnalyzerListener
+  
+tests:
+  - name: I Sprint Test Cases
+    classes:
+	- testcases.loadpay.broker.BrokerRegisterTest
+	- testcases.loadpay.broker.BrokerOutlookTest
+	- testcases.loadpay.admin.AdminBrokerTest
+	- testcases.loadpay.broker.BrokerLoginTest
+	- testcases.loadpay.carrier.CarrierRegisterTest
+	- testcases.loadpay.carrier.CarrierOutlookTest
+	- testcases.loadpay.admin.AdminCarrierTest
+	- testcases.loadpay.carrier.CarrierLoginTest
+	- testcases.loadpay.broker.BrokerNewPaymentTest
+    - testcases.loadpay.carrier.CarrierNotificationTest
+	- testcases.loadpay.carrier.CarrierWireTransferTest
+	- testcases.loadpay.carrier.CarrierSameDayACHTest
+	- testcases.loadpay.carrier.CarrierNextDAYACHTest
+	- testcases.loadpay.carrier.CarrierPayMeNowTabTest
+	- testcases.loadpay.broker.BrokerPaymentforUnmatchedCarrierTest
+	- testcases.loadpay.unmatched.UnmatchedCarrierRegistrationTest
+	- testcases.loadpay.unmatched.UnmatchedCariierEmailVerifyTest
+	- testcases.loadpay.unmatched.UnmatchedCarrierAdminTest
+	- testcases.loadpay.carrier.CarrierFirstLoginTest
+	- testcases.loadpay.unmatched.UnmatchedCarrierSameDayACHTest
+	- testcases.loadpay.unmatched.UnmatchedCarrierWireTransferTest
