--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -20,6 +20,7 @@ PasswordForBulkPaymentUsers = Password@1
 CarrierMatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateMatchedCarrier.csv
 CarrierUnmatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateUnmatchedCarrier.csv
 BrokerBulkUploadPaymentErrorsPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\BrokerBulkUploadPaymentErrors.csv
+CheckProcessImportTemplateupdatedPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\Check Process Import Template_updated.csv
 
 #Use this to generate a date-time string that gets concatenated with the broker/carrier register email
 #---must be lower case
