--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -20,8 +20,7 @@ PasswordForBulkPaymentUsers = Password@1
 CarrierMatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateMatchedCarrier.csv
 CarrierUnmatchedBulkUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\LoadPayBulkTemplateUnmatchedCarrier.csv
 BrokerBulkUploadPaymentErrorsPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\BrokerBulkUploadPaymentErrors.csv
-CheckProcessImportTemplateUpdatedPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\PayByCheckFileUploadTemplate_updated.csv
-CheckProcessImportTemplatePath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\PayByCheckFileUploadTemplate.csv
+PayByCheckCsvUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFramework\\src\\main\\java\\testdata\\LoadPay\\PayByCheckFileUploadTemplate.csv
 
 #Use this to generate a date-time string that gets concatenated with the broker/carrier register email
 #---must be lower case
@@ -30,7 +29,7 @@ CheckProcessImportTemplatePath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\Sele
 useDynamicBrokerData = true
 useDynamicCarrierData = true
 useDynamicUnmatchedData = true
-useFullRegressionData =  true
+useFullRegressionData = false
 
 
 
@@ -63,7 +62,7 @@ browser = chrome
 
 
 #===============VIDEO CAPTURE CONFIG=======================
-useVideoCapture = true
+useVideoCapture = false
 
 
 
