added video file folder - 111418

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -29,7 +29,7 @@ PayByCheckCsvUploadPath=C:\\AUTOMATION\\SELENIUM\\_Project\\testing\\SeleniumFra
 useDynamicBrokerData = true
 useDynamicCarrierData = true
 useDynamicUnmatchedData = true
-useFullRegressionData = false
+useFullRegressionData = true
 
 
 
@@ -62,7 +62,7 @@ browser = chrome
 
 
 #===============VIDEO CAPTURE CONFIG=======================
-useVideoCapture = false
+useVideoCapture = true
 
 
 
