Added JIRA login classes

--- a/src/main/java/config/config.properties
+++ b/src/main/java/config/config.properties
@@ -53,6 +53,9 @@ mobileURL=https://loadtracking-qa.truckstop.com/app/tracks/list
 v5_prototypeURL=https://v5-prototype.truckstop.com/login
 
 
+#===============JIRA URLS====================================
+JiraURL=https://gojira.truckstop.com/login.jsp
+JiraBrowseURL=https://gojira.truckstop.com/browse/
 
 #===============BROWSER TYPES==============================
 #browser = FF
