--- a/.classpath
+++ b/.classpath
@@ -29,19 +29,18 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/commons-lang3-3.4.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-2.4.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-json-2.4.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/groovy-xml-2.4.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/hamcrest-library-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/httpmime-4.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/jaxb-api-2.2.12.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/rest-assured-3.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/RestAssured/tagsoup-1.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/jackson-core-2.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/jxl.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/testng-6.8.7.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/velocity-dep-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/ews-java-api-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/httpclient-4.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/httpcore-4.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/AUTOMATION/SELENIUM/_Project/testing/SeleniumFramework/src/main/resources/libs/joda-time-2.8.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
