--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
 				    <version>3.2.0</version>
 				    <scope>test</scope>
 				</dependency>
+				
+				<!-- https://mvnrepository.com/artifact/com.microsoft.ews-java-api/ews-java-api -->
+				<dependency>
+				    <groupId>com.microsoft.ews-java-api</groupId>
+				    <artifactId>ews-java-api</artifactId>
+				    <version>2.0</version>
+				</dependency>
+				
   				
    			  <dependency>
                      <groupId>org.seleniumhq.selenium</groupId>
